<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/them_sv"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/hoten_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hoten"
        android:padding="15dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/gioitinh_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gioitinh"
        android:padding="15dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dienthoai_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dien_thoai"
        android:padding="15dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="15dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_add"
        android:layout_marginTop="20dp"
        android:text="Add"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
</LinearLayout>