<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_gioitinh"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/male_icon" />
    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/ma_sv"
            android:textSize="20sp"
            android:id="@+id/tv_masv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/hoten"
            android:textSize="20sp"
            android:id="@+id/tv_hoten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/dien_thoai"
            android:textSize="20sp"
            android:id="@+id/tv_dienthoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/email"
            android:textSize="20sp"
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>